--- a/finsense/views/layout.jade
+++ b/finsense/views/layout.jade
@@ -3,5 +3,16 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css', integrity='sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7', crossorigin='anonymous')
+
   body
+    nav.navbar.navbar-default
+      .container-fluid
+          .navbar-header
+            a.navbar-brand(href='#')
+              img(alt='Brand', src='...')
+
     block content
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
+    script(src='js/bootstrap.min.js')
+
