update styling for main page

--- a/finsense/views/layout.jade
+++ b/finsense/views/layout.jade
@@ -68,9 +68,9 @@ html
     header
       .container
         .intro-text
-          .intro-lead-in(style='solid margin 2px;') Welcome To FinSense!
+          .intro-lead-in(style="text-shadow: 2px 2px 8px #000;") Welcome To FinSense!
 
-          .intro-heading It&apos;s Nice To Meet You
+          .intro-heading(style="text-shadow: 2px 2px 8px #000;") It&apos;s Nice To Meet You
 
           a.page-scroll.btn.btn-xl(href='#home')
             | Sign in with Instagram
