Add session to store user information

--- a/finsense/views/success.jade
+++ b/finsense/views/success.jade
@@ -3,6 +3,6 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  p= data.user.full_name
-  p= data.user.username
-  img(src=data.user.profile_picture)
+  // p= data.user.full_name
+  // p= data.user.username
+  // img(src=data.user.profile_picture)
