--- a/finsense/views/index.jade
+++ b/finsense/views/index.jade
@@ -12,7 +12,7 @@ block content
             Menu
             i.fa.fa-bars
 
-          a.navbar-brand.page-scroll(href='#page-top') FinSense
+          a.navbar-brand.page-scroll(href='/') FinSense
 
         #bs-example-navbar-collapse-1.collapse.navbar-collapse
           ul.nav.navbar-nav.navbar-right
@@ -20,7 +20,7 @@ block content
               a(href='#page-top')
 
             li
-              a.page-scroll(href='#home') Home
+              a.page-scroll(href='/success') Home
         .navbar-collapse
       .container-fluid
     header
