--- a/finsense/views/index.jade
+++ b/finsense/views/index.jade
@@ -21,6 +21,8 @@ block content
 
             li
               a.page-scroll(href='/success') Home
+            li
+              a.page-scroll(href='/logout') Logout
         .navbar-collapse
       .container-fluid
     header
