--- a/finsense/views/success.jade
+++ b/finsense/views/success.jade
@@ -21,6 +21,9 @@ block content
 
             li
               a.page-scroll(href='/success') Home
+            li
+              a.page-scroll(href='https://www.instagram.com/accounts/logout', target="_blank", onclick= "window.location='http://localhost:3000/logout';") Logout
+
         .navbar-collapse
       .container-fluid
 
