--- a/finsense/views/layout.jade
+++ b/finsense/views/layout.jade
@@ -8,10 +8,6 @@ html
 
     meta(name='viewport', content='width=device-width, initial-scale=1')
 
-    meta(name='description', content='')
-
-    meta(name='author', content='')
-
     title FinSense
     // Bootstrap Core CSS
     link(href='vendor/bootstrap/css/bootstrap.min.css', rel='stylesheet')
@@ -44,7 +40,26 @@ html
       }
 
 
+  body#page-top.index
+  nav#mainNav.navbar.navbar-default.navbar-custom.navbar-fixed-top
+      .container
+        // Brand and toggle get grouped for better mobile display
+        .navbar-header.page-scroll
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
+            span.sr-only Toggle navigation
+            Menu
+            i.fa.fa-bars
 
+          a.navbar-brand.page-scroll(href='/') FinSense
+
+        #bs-example-navbar-collapse-1.collapse.navbar-collapse
+          ul.nav.navbar-nav.navbar-right
+            li.hidden
+              a(href='#page-top')
+
+            li
+              a.page-scroll(href='/success') Home
+        .navbar-collapse
+      .container-fluid
 
     block content
-
