update z-index of modal backdrop so that it shows up properly

--- a/finsense/views/layout.jade
+++ b/finsense/views/layout.jade
@@ -63,3 +63,17 @@ html
       .container-fluid
 
     block content
+
+    script(src='vendor/jquery/jquery.min.js')
+
+    script(src='vendor/bootstrap/js/bootstrap.min.js')
+
+    script(src='http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js')
+
+    script(src='js/agency.min.js')
+
+    script(src='https://code.highcharts.com/highcharts.js')
+
+    script(src='https://code.highcharts.com/modules/exporting.js')
+
+    script(src='js/chart_js.js')
