update spin wheel feature with TweenMax js reference and tween package

--- a/finsense/views/layout.jade
+++ b/finsense/views/layout.jade
@@ -77,3 +77,5 @@ html
     script(src='https://code.highcharts.com/modules/exporting.js')
 
     script(src='js/chart_js.js')
+
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js')
