update quiz route and jade file to render properly

--- a/finsense/views/success.jade
+++ b/finsense/views/success.jade
@@ -260,7 +260,7 @@ block content
 
                 p.item-intro.text-muted Get a head start and earn more points
 
-                a(href='quiz.htm')
+                a(href='/quiz')
                   button.btn.btn-primary(type='button') Take a Quiz!
 
     #portfolioModal2.portfolio-modal.modal.fade(tabindex='-1', role='dialog', aria-hidden='true')
@@ -289,7 +289,7 @@ block content
 
                 p.item-intro.text-muted Get a head start and earn more points
 
-                a(href='quiz.htm')
+                a(href='/quiz')
                   button.btn.btn-primary(type='button') Take a Quiz!
 
     #portfolioModal3.portfolio-modal.modal.fade(tabindex='-1', role='dialog', aria-hidden='true')
@@ -326,7 +326,7 @@ block content
 
                 p.item-intro.text-muted Get a head start and earn more points
 
-                a(href='quiz.htm')
+                a(href='/quiz')
                   button.btn.btn-primary(type='button') Take a Quiz!
 
     footer
