update with our own video

--- a/finsense/views/index.jade
+++ b/finsense/views/index.jade
@@ -17,7 +17,7 @@ block content
     .container
       .row
         .video-container
-          iframe(src='http://player.vimeo.com/video/18776121?title=0&byline=0&portrait=0', width='100%', height='100%', frameborder='0', webkitallowfullscreen='', mozallowfullscreen='', allowfullscreen='')
+          iframe(src="https://www.youtube.com/embed/mqzC_6UiejA", width="560", height="315", frameborder="0", allowfullscreen)
   footer
     .container
       .row
