Fix links for Sign in and logout

--- a/views/index.jade
+++ b/views/index.jade
@@ -9,8 +9,7 @@ block content
 
         .intro-heading(style="text-shadow: 2px 2px 8px #000;") It&apos;s Nice To Meet You
 
-        a.page-scroll.btn.btn-xl(href='/authorize_user')
-          Sign in with Instagram
+        a.page-scroll.btn.btn-xl(href='/authorize_user') Sign in with Instagram
           span.fa.fa-instagram
 
   section#team.bg-light-gray
