--- a/views/layout.jade
+++ b/views/layout.jade
@@ -59,6 +59,8 @@ html
 
             li
               a.page-scroll(href='/success') Home
+            li
+              a.page-scroll(href='https://www.instagram.com/accounts/logout',target="_blank", onclick="window.location='https://finsense.herokuapp.com/logout';") Logout
         .navbar-collapse
       .container-fluid
 
