--- a/views/quiz.jade
+++ b/views/quiz.jade
@@ -1,7 +1,7 @@
 
 block content
 
-  a(href='index.html') Back to home page
+  a(href='/') Back to home page
     &#x9;
     #main-quiz-holder
       #intro-container.questionContainer
